# kashida

./: Cargo.toml  README.md
examples/: simple.rs
src/: arabic.rs  codepoints.rs  ffi.rs  global.rs  lib.rs  main.rs  syriac.rs
