[package]
name = "kashida"
version = "0.0.3"
edition = "2021"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "Crate to insert Kashidas into Arabic text, for justification purposes."
license = "MIT"
repository = "https://github.com/asibahi/kashida"
readme = "README.md"
keywords = ["arabic", "text"]

[dependencies]
constcat = "0.5.0"
hashbrown = "0.14.5"
icu_segmenter = "1.4.0"
itertools = { version = "0.12", default-features = false }
